<resources>
    <string name="app_name">UniFood</string>
    <string name="email_address">abc123@student.le.ac.uk</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Signup</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">1998-01-01</string>
    <string name="back_btn">Back</string>
    <string name="title_activity_main">Main</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>
    <string name="title_order">Order</string>
    <string name="product_list">Product List</string>
    <string name="error_login">Invalid Email or Password!</string>
    <string name="search">Search</string>
    <string name="search_hint">Search...</string>
    <string name="basket">basket</string>
    <string name="out_of_stock_msg">Out of Stock!</string>
    <string name="add_to_basket_btn">Add to Basket</string>
    <string name="sign_up">Sign Up</string>

</resources>
